modules/eks/worley-nc-angular.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
          ports:
            - containerPort: 80
      volumes:
        - name: html
          configMap:
            name: app1-html
 
---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "alb" # Specify ALB
spec:
  type: ClusterIP # Change to ClusterIP as we'll use Ingress
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: app1
